@@ -26,12 +26,12 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.nio.file.Files;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.lecturestudio.core.ExecutableBase;
 import org.lecturestudio.core.ExecutableException;
 import org.lecturestudio.core.geometry.Rectangle2D;
 import org.lecturestudio.core.model.Document;
+import org.lecturestudio.core.model.NotesPosition;
 import org.lecturestudio.core.model.Page;
 import org.lecturestudio.core.model.shape.Shape;
 import org.lecturestudio.core.pdf.PdfDocument;
@@ -170,8 +170,10 @@ public class PdfDocumentRenderer extends ExecutableBase {
 			Document newDocument = new Document();
 			newDocument.setTitle(FileUtils.stripExtension(outputFile.getName()));
 
-			int pageCount = documents.stream().mapToInt(Document::getPageCount).sum();
 			int pagesWritten = 0;
+			long pageCount = pages.stream()
+					.filter(page -> documents.contains(page.getDocument()))
+					.count();
 			float pageStep = 1.f / pageCount;
 
 			for (Page page : pages) {
@@ -220,6 +222,7 @@ public class PdfDocumentRenderer extends ExecutableBase {
 	private void createPage(PresentationParameter param,
 			Document newDocument, Page page) throws Exception {
 		Rectangle2D pageRect = param.getPageRect();
+		NotesPosition notesPosition = page.getDocument().getSplitSlideNotesPositon();
 
 		Page newPage = newDocument.createPage(page, pageScale ? pageRect : null);
 		int pageIndex = newPage.getPageNumber();
@@ -236,11 +239,11 @@ public class PdfDocumentRenderer extends ExecutableBase {
 		if (editable) {
 			// Tag graphics stream to be able to find it later.
 			graphics = (PDFGraphics2D) pdfDocument.createAppendablePageGraphics2D(
-					pageIndex, PdfDocument.EMBEDDED_SHAPES_KEY);
+					pageIndex, PdfDocument.EMBEDDED_SHAPES_KEY, NotesPosition.UNKNOWN);
 		}
 		else {
 			graphics = (PDFGraphics2D) pdfDocument.createAppendablePageGraphics2D(
-					pageIndex);
+					pageIndex, NotesPosition.UNKNOWN);
 		}
 
 		SwingGraphicsContext gc = new SwingGraphicsContext(graphics);
@@ -255,15 +258,18 @@ public class PdfDocumentRenderer extends ExecutableBase {
 		}
 
 		AffineTransform annotTransform = transform.createInverse();
-		Rectangle2D mediaBox = pdfDocument.getPageMediaBox(pageIndex);
+		Rectangle2D mediaBox = pdfDocument.getPageMediaBox(pageIndex, notesPosition);
 
 		double pageWidth = mediaBox.getWidth();
 		double sx = pageWidth * annotTransform.getScaleX();
 		double tx = pageWidth * annotTransform.getTranslateX();
 		double ty = pageWidth * annotTransform.getTranslateY();
 
-		// Move to top-left corner.
-		gc.translate(-tx, ty + mediaBox.getHeight());
+		if(page.getDocument().getActualSplitSlideNotesPositon() == NotesPosition.LEFT) {
+			mediaBox.setRect(mediaBox.getWidth(), mediaBox.getY(), mediaBox.getWidth(), mediaBox.getHeight());
+			tx -= pageWidth;
+		}
+		gc.translate(-tx , ty + mediaBox.getHeight());
 		gc.scale(sx, -sx);
 
 		// Draw shapes.
@@ -273,7 +279,7 @@ public class PdfDocumentRenderer extends ExecutableBase {
 			// Create additional binary encoded shape stream.
 			List<Shape> shapes = page.getShapes().stream()
 					.filter(shape -> renderService.hasRenderer(shape.getClass()))
-					.collect(Collectors.toList());
+					.toList();
 
 			pdfDocument.createEditableAnnotationStream(pageIndex, shapes);
 		}
